# GraphCreator

./: .deepeval-cache.json  .gitignore  GraphCreation.ipynb  GraphCreation.py  GrapheCreation.ipynb  LICENSE  README.md  Untitled spreadsheet - Sheet1.csv  __init__.py  animalsclustered_graph.html  clustered_graph.html  combined.csv  fresh.csv  graph.graphml  graph.html  graph.json  pyproject.toml  pyprojedct.toml  requirments.txt  tester.py
animals/: clustered_graph.html  graph.graphml  graph.html  graph.json
oos/0/: clustered_graph.html
output/: results.csv
output/0/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/1/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/10/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/11/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/12/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/13/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/14/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/15/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/2/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/3/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/4/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/5/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/6/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/7/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/8/: clustered_graph.html  graph.graphml  graph.html  graph.json
output/9/: clustered_graph.html  graph.graphml  graph.html  graph.json
right/: results.csv
right/0/: clustered_graph.html  graph.graphml  graph.html  graph.json
right/1/: clustered_graph.html  graph.graphml  graph.html  graph.json
right/10/: clustered_graph.html  graph.graphml  graph.html  graph.json
right/11/: clustered_graph.html  graph.graphml  graph.html  graph.json
right/12/: graph.graphml  (+3 more)
rights/: clustered_graph.html  graph.graphml  graph.html  graph.json  myresume.graphml  myresume.html
src/: GraphCreation.py  __init__.py
tests/: test_converege_lists.py  test_creation.py  test_fix_ontology.py  test_json_fixer.py  test_ontology.py  test_summary_combinations.py  test_textformatting.py  test_triplet_creation.py
(+116 files in other folders)
