[project]
name = "GraphCreation"
version = "0.0.1"
authors = [
  { name="Christopher Oosthuizen", email="christopher.jan.oosthuizen@gmail.com" },
]
description = "Knowledge Graph Creation Library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"cdlib",
"flair",
"html5lib",
"huggingface",
"langchain-community",
"leidenalg",
"llama-index==0.10.48.post1",
"llama-index-llms-huggingface==0.2.3",
"llama-index-readers-web==0.1.20",
"llmlingua",
"markdownify",
"pdfminer==20191125",
"pdfminer.six==20231228",
"protobuf",
"PySocks",
"pyvis==0.3.2",
"llama-index-llms-ollama",
]
[project.urls]
Homepage="https://github.com/ChristopherOosthuizen/GraphCreator"
Issues="https://github.com/ChristopherOosthuizen/GraphCreator/issues"
[build-system]
requires=["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = []

[tool.setuptools.package-data]
"GraphCreation" = ["prompts/*"]